refatory(clean code)